Fix layout overflow on specific width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,20 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+@media all and (max-width: 563px) {
+  section {
+    padding: 60px 0;
+  }
+
+  #copyright {
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+}
+
 @media all and (min-width: 993px) {
   #copyright {
     position: absolute;
